# mexc-sniper-bot

./: .dockerignore  .env.example  .gitignore  ALL_PHASE_7_8_FILES_READY.md  ANSWER_YOUR_QUESTION.md  AUTO_SNIPING_VALIDATION_REPORT.md  AWS_CODEDEPLOY_GETTING_STARTED.md  AWS_CODEDEPLOY_IMPLEMENTATION_SUMMARY.md  AWS_EC2_DEPLOYMENT.md  AWS_TROUBLESHOOTING_GUIDE.md  BUILD_NOTES.md  CLEANUP_SUMMARY.md  CLEANUP_VERIFICATION_REPORT.md  CODEDEPLOY_SETUP_SUMMARY.md  CRITICAL_BLOCKERS_VERIFICATION.md  CRON_JOBS_CONFIGURED.md  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_FAILURE_ANALYSIS.md  DEPLOYMENT_FEEDBACK_REPORT.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_INSPECTION_REPORT.md  DEPLOYMENT_INVESTIGATION_SUMMARY.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_REPORT_DE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_SUMMARY.md  DIRECTORY_ASSESSMENT_REPORT.md  DOCUMENTATION_INDEX_PHASE_7_8.md  Dockerfile.frontend  EC2_DEPLOYMENT_COMPLETION.md  EC2_DEPLOYMENT_QUICK_START.md  EXECUTIVE_SUMMARY.md  GITHUB_SECRETS_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_INSTRUCTIONS.md  Makefile  NEXTJS_16_UPGRADE.md  (+54 more)
.codex/: agents.py  setup.py
.daddy/: daddy-config.json
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
.qlty/: qlty.toml
.serena/: project.yml
__tests__/: hybrid-queue-api.integration.test.ts  hybrid-queue.integration.test.ts
app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
backend-rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.prod.yml
backend-rust/src/: main.rs  tests.rs
backend-rust/src/api/: admin.rs  market.rs  mod.rs  status.rs  trading.rs
backend-rust/src/mexc/: client.rs  mod.rs  models.rs  websocket.rs
backend-rust/src/storage/: dynamodb.rs  migration.rs  mod.rs  models.rs
backend-rust/src/trading/: detector.rs  manager.rs  mod.rs  sniper.rs
backend-rust/src/utils/: config.rs  logging.rs  metrics.rs  mod.rs
config/: sniper-config.json
docs/: ADVANCED_SNIPER_INTEGRATION_EXAMPLE.md  AI_SIGNAL_VALIDATION_PLAN.md  ASYNC_SNIPER_ARCHITECTURE.md  AWS_CODEDEPLOY_GITHUB_SECRETS.md  AWS_CODEDEPLOY_INDEX.md  AWS_CODEDEPLOY_QUICK_REFERENCE.md  AWS_CODEDEPLOY_SETUP.md  BLUE_GREEN_DEPLOYMENT.md  CALENDAR_SYNC_WORKFLOW.md  CLEANUP_PATTERNS.md  CLERK_E2E_SETUP.md  CLERK_MIGRATION_COMPLETE.md  CLERK_TESTING.md  DIRECTORY_STRUCTURE.md  EC2_DEPLOYMENT.md  EXTERNAL_SNIPER_ANALYSIS.md  HYBRID_QUEUE_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  JOB_QUEUE_SYSTEM.md  MIGRATION_SUMMARY.md  (+11 more)
(+847 files in other folders)
